Fix text wrap and switch to bonjour (#1041)
* some fixes

* fix scrollbar

* fix linter issue

--- a/src/app/filament/filament.component.scss
+++ b/src/app/filament/filament.component.scss
@@ -306,6 +306,6 @@
 
 .scroll__thumb-inactive {
   right: 2vw;
-  top: 36vh;
+  top: 34.7vh;
   height: 57.2vh;
 }
