--- a/src/styles.scss
+++ b/src/styles.scss
@@ -194,10 +194,10 @@ app-root {
   display: block;
   background-color: rgba(127, 143, 166, 0.3);
   width: 3vw;
-  height: 66.4vh;
+  height: 66.6vh;
   position: fixed;
   right: 2.5vw;
-  top: 28vh;
+  top: 26.7vh;
   border-radius: 0.89vw;
   z-index: 0;
   pointer-events: none;
